# fetch-take-home-sre

./: README.md  pyproject.toml
doc/: main.py
src/fetch_take_home_sre/: cli.py  endpoint_monitoring.py  models.py
tests/: __init__.py  conftest.py  test_cli.py  test_endpoint_monitoring.py  test_model.py
